Update landing page text

--- a/src/index.html
+++ b/src/index.html
@@ -831,11 +831,7 @@ ___( o)>
             ]);
 
             const welcomeMessage = [
-                { text: 'Welcome to my portfolio! I am a Adelaide, Australia based creative frontend developer with a passion for building beautiful and functional specialising in reverse engineering.' },
-                { text: ' ', hasBuffer: true },
-                { text: 'Making predictions is the only viable way to test your model of the world. It\'s easy to fall prey to hindsight bias, looking at past events and feeling like the outcome was obvious. The real test is to make forward-looking, falsifiable predictions and then check back later to see if they came true. This brain dump is an attempt to do just that.' },
-                { text: ' ', hasBuffer: true },
-                { text: 'You can use the navigation above, or type `help` for a list of commands.', hasBuffer: true },
+                { text: "sup, I’m Tim. I reverse engineer cross-platform malware, automate my home with AI agents that talk like ducks, and train like I’m about to step on stage every weekend. My life runs on gym splits, zero-day exploits, and WAY too many Google Sheets. When I’m not dissecting binary payloads or building self-hosted systems that outpace the market, I’m painting whatevers in my brain or designing smarter ways to log life, and raise my son in a collapsing world. If it’s got a shell, I’ll talk to it. If it’s got reps, I’ll log it. If it exists, I’m probably trying to automate it." }
             ];
 
             // Robust progressive article expansion with improved state management
