Refactor: Component-based Desktop GUI, AI Duck Agent, and Secrets Maze

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -891,6 +892,15 @@
         }
     </script>
     <script src="js/writings-data.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/components/FileSystem.js"></script>
+    <script src="js/components/NavComponents.js" type="text/babel"></script>
+    <script src="js/components/DraggableWindow.js" type="text/babel"></script>
+    <script src="js/components/SecretsMaze.js" type="text/babel"></script>
+    <script src="js/components/Desktop.js" type="text/babel"></script>
+    <script src="js/components/ArticleReader.js" type="text/babel"></script>
+    <script src="js/components/AnimatedDuck.js" type="text/babel"></script>
+    <script src="js/components/Terminal.js" type="text/babel"></script>
     <script src="js/app.js" type="text/babel"></script>
 </body>
 </html>
